# hello-computer

./: .gitconfig  .yamllint.yaml  .zshrc  README.md  deb.sh  go.sh  install.sh  kitty.sh  local.plugins.yaml  local.vim  mac.sh  op.sh  pacman.list  python.sh  vim.sh
ansible/: Makefile  README.md  debug.yml  inventory.yml  main.yml  pyproject.toml  requirements.yml  vault-pass-client
ansible/src/: calibre.service  karakeep-compose.yml  karakeep.env.j2  node-exporter-env.j2  prometheus.yml.j2
ansible/src/grafana/: grafana.ini.j2
ansible/src/news/systemd/: db.container  miniflux.container  news.pod  wallabag.container
ansible/src/todo/: config.yml.j2
ansible/src/todo/systemd/: db.container  todo.container  todo.pod
ansible/tasks/: git.yml  init.yml  karakeep.yml  news.yml  optiflex.yml  prometheus.yml  todo.yml
git/: .gitconfig  .gitconfig_linux  .gitconfig_mac  .gitignore_global  .gitmessage  .lj.gitconfig
homebrew/.config/homebrew/: Brewfile
hypr/.config/hypr/: hypridle.conf  hyprland.conf  hyprlauncher.conf  hyprlock.conf  hyprpaper.conf  hyprqt6engine.conf  hyprtoolkit.conf
hypr/.config/swaync/: config.json  style.css
idea/: .ideavimrc
jupytext/.config/: jupytext.toml
kind/confs/: default.yaml
kitty/.config/kitty/: kitty-picker.conf  kitty.conf  kitty.conf.bak  linux.conf  (+2 more)
mimeapps/.config/: mimeapps.list
pi/: Makefile  README.md  inventory.yml  main.yml  pyproject.toml
pi/src/: linkwarden.env.j2
pi/tasks/: calibre.yml  init.yml  linkwarden.yml
starship/.config/: starship.toml
tmux/: .tmux.conf  .tmux.conf.local
zsh/: .zshrc
(+115 files in other folders)
