[project]
name = "ansible"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Maisie Bell", email = "4870168+maisieccino@users.noreply.github.com" }
]
dependencies = ["ansible-core (>=2.20.1,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
